# Phaistos

./: .flake8  .pylintrc  .readthedocs.yaml  README.md  mkdocs.yml  mypy.ini  pyproject.toml  pytest.ini  setup.py
.github/assets/: pypi_desc.md
.github/workflows/: code-tests.yml  lint-code.yml  publish.yml  requirements.txt
confjurer/: consts.py  exceptions.py  transpiler.py  validation.py
confjurer/types/: schema.py
docs/: index.md  installation.md  logging.md  main-features.md  manager.md  noauto.md  nodiscovery.md  requirements.txt  schema.md  transpiler.md  validator.md
docs/getting-started/: installation.md  main-features.md  main_features.md  schema.md
examples/: README.md  automatic.py  fastapi_models.py  instances.py  manual.py  mv.py  skip_discovery.py
examples/automatic_discovery/: runner.py
examples/automatic_discovery/schemas/: database.yaml
examples/schemas/: database.yaml  mockument.yaml
phaistos/: __init__.py  compiler.py  compiler.pyi  consts.py  consts.pyi  exceptions.py  exceptions.pyi  manager.py  manager.pyi  schema.py  schema.pyi  sources.py  sources.pyi  transpiler.py  transpiler.pyi  types.py  typings.py  typings.pyi  utils.py  utils.pyi  validation.py  validator.py
phaistos/types/: schema.py
tests/: conftest.py  consts.py  test_manager.py  test_transpilation.py  test_transpiler.py  test_validation.py  test_validator.py
tests/assets/: faulty.yaml  faulty_double_nested.yaml  faulty_flat.yaml  faulty_nested.yaml  mock.yaml  valid.yaml
