[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["confjurer", "confjurer.*"]
namespaces = true

[project]
name = "confjurer"
version = "0.1.0"
description = "Tooling to automatically generate validated data models from YAML configuration files"
license = {file = "LICENSE"}
dependencies = [
    "PyYAML==6.0.1",
    "pydantic==2.7.0"
]
