[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["."]
include = ["phaistos", "phaistos.*"]
namespaces = true

[project]
name = "phaistos"
version = "0.1.0"
description = "Tooling to automatically generate validated data models from YAML configuration files"
license = {file = "LICENSE"}
readme = {file = "README.md", content-type = "text/markdown"}
dependencies = [
    "PyYAML==6.0.1",
    "pydantic==2.7.0",
]
authors = [
    { name="Kamil Rybacki", email="kamilandrzejrybacki@gmail.com" }
]
requires-python = ">=3.12"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
homepage = "https://phaistos.readthedocs.io/en/latest/"
